--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
     <dependency>
+      <!-- Added for livereload, only works for java files atm, check setup for html fragmets reload -->
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
       <scope>runtime</scope>
